kubernetes/devops-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali-service
spec:
  type: NodePort
  selector:
    app: kiali
  ports:
  - protocol: TCP
    port: 20001
    targetPort: 20001
    nodePort: 31001
---
apiVersion: v1
kind: Service
metadata:
  name: terraform-service
spec:
  type: NodePort
  selector:
    app: terraform
  ports:
  - protocol: TCP
    port: 20002
    targetPort: 20002
    nodePort: 31002
