kubernetes/openmail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openmail-service
spec:
  type: NodePort
  selector:
    app: openmail
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
    nodePort: 30001
